update mobile responsive

--- a/src/app/pages/dashboard/home/home.component.html
+++ b/src/app/pages/dashboard/home/home.component.html
@@ -16,7 +16,7 @@
                         </div>
                         <div
                             class="collection-title d-flex flex-column justify-content-center align-items-start flex-fill px-4">
-                            <label class="fs-5 mb-0" [ngStyle]="{'font-family': 'app_font'}">Merchant 1</label>
+                            <label class="mb-0" [ngStyle]="{'font-family': 'app_font', 'font-size': '16px'}">Merchant 1</label>
                             <label class="text-muted my-3" [ngStyle]="{'font-size.px' : 10}">Lanuch Date: </label>
                         </div>
                     </div>
@@ -28,7 +28,7 @@
                         </div>
                         <div
                             class="collection-title d-flex flex-column justify-content-center align-items-start flex-fill px-4">
-                            <label class="fs-5 mb-0" [ngStyle]="{'font-family': 'app_font'}">Merchant 2</label>
+                            <label class="mb-0" [ngStyle]="{'font-family': 'app_font', 'font-size': '16px'}">Merchant 2</label>
                             <label class="text-muted my-3" [ngStyle]="{'font-size.px' : 10}">Lanuch Date: </label>
                         </div>
                     </div>
@@ -40,7 +40,7 @@
                         </div>
                         <div
                             class="collection-title d-flex flex-column justify-content-center align-items-start flex-fill px-4">
-                            <label class="fs-5 mb-0" [ngStyle]="{'font-family': 'app_font'}">Merchant 3</label>
+                            <label class="mb-0" [ngStyle]="{'font-family': 'app_font', 'font-size': '16px'}">Merchant 3</label>
                             <label class="text-muted text-start my-3" [ngStyle]="{'font-size.px' : 10}">Lanuch Date: </label>
                         </div>
                     </div>
