--- a/src/app/pages/dashboard/manage-collection/manage-collection.component.scss
+++ b/src/app/pages/dashboard/manage-collection/manage-collection.component.scss
@@ -64,7 +64,7 @@
     }
     th {
         background-color: #F2F2F2;
-        
+        vertical-align: middle;
     }
     tr.separator {
         height: 10px;
