--- a/src/app/shared/components/layouts/dashboard-layout/dashboard-layout.component.scss
+++ b/src/app/shared/components/layouts/dashboard-layout/dashboard-layout.component.scss
@@ -11,3 +11,6 @@ body {
     border-top-left-radius: 0px!important;
     border-bottom-left-radius: 0px!important;
 }
+.dashboard-content {
+    width: calc(100vw - 68px);
+}
