--- a/src/app/pages/dashboard/manage-reward/manage-reward.component.scss
+++ b/src/app/pages/dashboard/manage-reward/manage-reward.component.scss
@@ -20,6 +20,7 @@
     }
     th {
         background-color: #F2F2F2;
+        vertical-align: middle;
     }
     tr:not(.separator) {
         background-color: #F2F2F2;
