--- a/src/app/pages/dashboard/merchant-portal/merchant-portal.component.html
+++ b/src/app/pages/dashboard/merchant-portal/merchant-portal.component.html
@@ -2,45 +2,48 @@
 
     <div class="row p-0 m-0 pe-5">
         <label class="fs-3 mb-3" [ngStyle]="{'font-family': 'app_font'}">Collection Performance</label>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mb-3">
-            <div class="card top-card border-0 rounded-4">
-                <div class="card-body">
+        <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4 mb-3">
+            <div class="card top-card border-0 rounded-4 h-100">
+                <div class="card-body d-flex flex-column">
                     <label class="mb-3">Percentage Collected</label>
-                    <div class="text-center my-auto">
-                        <div class="pie-chart my-auto">
+                    <div
+                        class="text-center text-center flex-fill d-flex flex-column justify-content-center align-items-center">
+                        <div class="pie-chart">
                         </div>
                     </div>
 
                 </div>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mb-3 component-redeem-reward">
+        <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-4 mb-3 component-redeem-reward">
             <div class="card h-100 top-card border-0 rounded-4">
                 <div class="card-body">
                     <label class="mb-3">Redeemed Rewards</label>
-                    <div
-                        class="d-flex flex-row justify-content-between align-items-center rounded-pill shadow bg-white py-2 px-3 mb-3">
+                    <div class="d-flex flex-row align-items-center rounded-pill shadow bg-white py-2 px-3 mb-3">
                         <div class="item-image">
                             <img src="assets/img/project/dashboard/image_1.png" class="img-fluid" />
                         </div>
-                        <div class="fw-bold fs-5">
-                            Reward Name
+                        <div class="reward-detail">
+                            <p class="fw-bold item-name">
+                                Reward Name
+                            </p>
+                            <div class="item-title rounded-pill px-1 btn-main-bg text-white py-2">
+                                100 Redeems
+                            </div>
                         </div>
-                        <div class="item-title rounded-pill px-3 btn-main-bg text-white py-2"
-                            [ngStyle]="{'font-size.px': 8}">
-                            100 Redeems
-                        </div>
+
                     </div>
-                    <div
-                        class="d-flex flex-row justify-content-between align-items-center rounded-pill shadow bg-white py-2 px-3 mb-3">
+                    <div class="d-flex flex-row align-items-center rounded-pill shadow bg-white py-2 px-3 mb-3">
                         <div class="item-image">
                             <img src="assets/img/project/dashboard/image_2.png" class="img-fluid" />
                         </div>
-                        <div class="fw-bold fs-5">
-                            Reward Name
-                        </div>
-                        <div class="rounded-pill px-3 btn-main-bg text-white py-2" [ngStyle]="{'font-size.px': 8}">
-                            100 Redeems
+                        <div class="reward-detail">
+                            <p class="fw-bold item-name">
+                                Reward Name
+                            </p>
+                            <div class="item-title rounded-pill px-1 btn-main-bg text-white py-2">
+                                100 Redeems
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -70,45 +73,50 @@
                     <app-arrow-button class="ms-2" [isRight]="true"></app-arrow-button>
                 </div>
             </div>
-            <div class="row row-cols-1 row-cols-sm-3 mb-3 g-5">
-                <div class="col mb-3">
-                    <div class="card top-card border-0 rounded-5 d-flex flex-column justify-content-center">
-                        <div class="pt-3 text-center">
-                            <img src="assets/img/project/dashboard/home/collection_1.png" class="collection-img" />
-                        </div>
-                        <div
-                            class="collection-title d-flex flex-column justify-content-center align-items-center flex-fill">
-                            <label class="fw-bold fs-4 mb-0">Collection 1</label>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-3">
-                    <div class="card top-card border-0 rounded-5 d-flex flex-column justify-content-center">
-                        <div class="pt-3 text-center">
-                            <img src="assets/img/project/dashboard/home/collection_2.png" class="collection-img" />
-                        </div>
-                        <div
-                            class="collection-title d-flex flex-column justify-content-center align-items-center flex-fill">
-                            <label class="fw-bold fs-4 mb-0">Collection 2</label>
+            <div class="mportal-slider-wrapper py-2 px-0 mb-3">
+                <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="slideConfig">
+                    <div ngxSlickItem class="px-2 slide">
+                        <div class="card top-card border-0 rounded-5 d-flex flex-column justify-content-center">
+                            <div class="pt-3 px-3 text-center">
+                                <img src="assets/img/project/dashboard/home/collection_1.png" class="collection-img" />
+                            </div>
+                            <div
+                                class="collection-title d-flex flex-column justify-content-center align-items-center flex-fill">
+                                <label class="fw-bold fs-4 mb-0 py-3">Collection 1</label>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col mb-3">
-                    <div class="card top-card border-0 rounded-5 d-flex flex-column justify-content-center">
-                        <div class="pt-3 text-center">
-                            <img src="assets/img/project/dashboard/home/collection_3.png" class="collection-img" />
-                        </div>
-                        <div
-                            class="collection-title d-flex flex-column justify-content-center align-items-center flex-fill">
-                            <label class="fw-bold fs-4 mb-0">Collection 3</label>
+
+                    <div ngxSlickItem class="px-2 slide">
+                        <div class="card top-card border-0 rounded-5 d-flex flex-column justify-content-center">
+                            <div class="pt-3 px-3 text-center">
+                                <img src="assets/img/project/dashboard/home/collection_2.png" class="collection-img" />
+                            </div>
+                            <div
+                                class="collection-title d-flex flex-column justify-content-center align-items-center flex-fill">
+                                <label class="fw-bold fs-4 mb-0 py-3">Collection 2</label>
+                            </div>
                         </div>
                     </div>
-                </div>
+
+                    <div ngxSlickItem class="px-2 slide">
+                        <div class="card top-card border-0 rounded-5 d-flex flex-column justify-content-center">
+                            <div class="pt-3 px-3 text-center">
+                                <img src="assets/img/project/dashboard/home/collection_3.png" class="collection-img" />
+                            </div>
+                            <div
+                                class="collection-title d-flex flex-column justify-content-center align-items-center flex-fill">
+                                <label class="fw-bold fs-4 mb-0 py-3">Collection 3</label>
+                            </div>
+                        </div>
+                    </div>
+                </ngx-slick-carousel>
             </div>
+
         </div>
         <div class="col-sm-12 col-lg-4 mb-3">
-            <label class="fs-3" [ngStyle]="{'height.px' : 60, 'font-family': 'app_font'}">List Rewards <span class="text-muted d-block"
-                    [ngStyle]="{'font-size.px' : 8}">Not Listed Yet</span></label>
+            <label class="fs-3" [ngStyle]="{'height.px' : 60, 'font-family': 'app_font'}">List Rewards <span
+                    class="text-muted d-block" [ngStyle]="{'font-size.px' : 8}">Not Listed Yet</span></label>
             <div class="card top-card border-0 rounded-4">
                 <div class="card-body d-flex flex-column justify-content-center">
                     <div
