--- a/src/app/pages/dashboard/user-portal/user-portal.component.html
+++ b/src/app/pages/dashboard/user-portal/user-portal.component.html
@@ -8,48 +8,52 @@
                     <app-arrow-button class="ms-2" [isRight]="true"></app-arrow-button>
                 </div>
             </div>
-            <div class="row row-cols-1 row-cols-md-3 mb-3 g-5">
-                <div class="col mb-3">
-                    <div class="card top-reward-card border-0 rounded-5 d-flex flex-column justify-content-center">
-                        <div class="p-2 collection-image-wrapper">
-                            <img src="assets/img/project/dashboard/home/reward_1.png" class="collection-img" />
-                        </div>
-                        <div
-                            class="collection-title d-flex flex-column justify-content-center align-items-start flex-fill px-4">
-                            <label class="fs-5 mb-0" [ngStyle]="{'font-family': 'app_font'}">Reward 1</label>
-                            <label class="text-muted my-3" [ngStyle]="{'font-size.px' : 10}">Date Won: </label>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-3">
-                    <div class="card top-reward-card border-0 rounded-5 d-flex flex-column justify-content-center">
-                        <div class="p-2 collection-image-wrapper">
-                            <img src="assets/img/project/dashboard/home/reward_2.png" class="collection-img" />
-                        </div>
-                        <div
-                            class="collection-title d-flex flex-column justify-content-center align-items-start flex-fill px-4">
-                            <label class="fs-5 mb-0" [ngStyle]="{'font-family': 'app_font'}">Reward 2</label>
-                            <label class="text-muted my-3" [ngStyle]="{'font-size.px' : 10}">Date Won: </label>
+            <div class="uPortal-sliderWrapper mb-3">
+                <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="slideConfig">
+                    <div ngxSlickItem class="px-2 slide">
+                        <div class="card top-reward-card border-0 rounded-5 d-flex flex-column justify-content-center">
+                            <div class="p-3 rewards-card-image-wrapper">
+                                <img src="assets/img/project/dashboard/home/reward_1.png" class="collection-img" />
+                            </div>
+                            <div
+                                class="collection-title d-flex flex-column justify-content-center align-items-start flex-fill px-4">
+                                <label class="fs-5 mb-0" [ngStyle]="{'font-family': 'app_font'}">Reward 1</label>
+                                <label class="text-muted my-3" [ngStyle]="{'font-size.px' : 10}">Date Won: </label>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col mb-3">
-                    <div class="card top-reward-card border-0 rounded-5 d-flex flex-column justify-content-center">
-                        <div class="p-2 collection-image-wrapper">
-                            <img src="assets/img/project/dashboard/home/reward_3.png" class="collection-img" />
-                        </div>
-                        <div
-                            class="collection-title d-flex flex-column justify-content-center align-items-start flex-fill px-4">
-                            <label class="fs-5 mb-0" [ngStyle]="{'font-family': 'app_font'}">Reward 3</label>
-                            <label class="text-muted my-3" [ngStyle]="{'font-size.px' : 10}">Date Won: </label>
+
+                    <div ngxSlickItem class="px-2 slide">
+                        <div class="card top-reward-card border-0 rounded-5 d-flex flex-column justify-content-center">
+                            <div class="p-2 rewards-card-image-wrapper">
+                                <img src="assets/img/project/dashboard/home/reward_2.png" class="collection-img" />
+                            </div>
+                            <div
+                                class="collection-title d-flex flex-column justify-content-center align-items-start flex-fill px-4">
+                                <label class="fs-5 mb-0" [ngStyle]="{'font-family': 'app_font'}">Reward 2</label>
+                                <label class="text-muted my-3" [ngStyle]="{'font-size.px' : 10}">Date Won: </label>
+                            </div>
                         </div>
                     </div>
-                </div>
+
+                    <div ngxSlickItem class="px-2 slide">
+                        <div class="card top-reward-card border-0 rounded-5 d-flex flex-column justify-content-center">
+                            <div class="p-2 rewards-card-image-wrapper">
+                                <img src="assets/img/project/dashboard/home/reward_3.png" class="collection-img" />
+                            </div>
+                            <div
+                                class="collection-title d-flex flex-column justify-content-center align-items-start flex-fill px-4">
+                                <label class="fs-5 mb-0" [ngStyle]="{'font-family': 'app_font'}">Reward 3</label>
+                                <label class="text-muted my-3" [ngStyle]="{'font-size.px' : 10}">Date Won: </label>
+                            </div>
+                        </div>
+                    </div>
+                </ngx-slick-carousel>
             </div>
         </div>
         <div class="col-md-4 col-sm-12 mb-3">
             <label class="fs-3" [ngStyle]="{'height.px' : 60, 'font-family': 'app_font'}">Redeemed Rewards</label>
-            <div class="card h-100 top-card border-0 rounded-4">
+            <div class="card top-reward-card border-0 rounded-4" [ngStyle]="{'height.px': 317}">
                 <div class="card-body d-flex flex-column justify-content-center ">
                     <div
                         class="d-flex flex-row justify-content-between align-items-center rounded-pill shadow bg-white py-2 px-3 mb-3">
@@ -86,10 +90,12 @@
             <label class="fs-3 mb-3" [ngStyle]="{'font-family': 'app_font'}">Money Spent</label>
             <div class="row row-cols-2 row-cols-md-1 row-cols-lg-2">
                 <div class="col mb-3">
-                    <div class="card money-spent-card border-0 rounded-5 d-flex flex-column justify-content-center h-100">
-                        <div
-                            class="collection-title d-flex flex-column justify-content-center align-items-center">
-                            <label class="text-white py-3" [ngStyle]="{'font-family': 'app_font', 'font-size': '14px'}">Most Valuable Reward</label>
+                    <div
+                        class="card money-spent-card border-0 rounded-5 d-flex flex-column justify-content-center h-100">
+                        <div class="collection-title d-flex flex-column justify-content-center align-items-center">
+                            <label class="text-white py-3"
+                                [ngStyle]="{'font-family': 'app_font', 'font-size': '14px'}">Most Valuable
+                                Reward</label>
                         </div>
                         <div class="p-3 pt-0 collection-image-wrapper mx-auto">
                             <img src="assets/img/project/dashboard/money_spent.png" class="collection-img" />
@@ -114,8 +120,8 @@
         </div>
 
         <div class="col-md-4 col-sm-12 mb-3">
-            <label class="fs-3" [ngStyle]="{'height.px' : 60, 'font-family': 'app_font'}">List Rewards <span class="text-muted d-block"
-                    [ngStyle]="{'font-size.px' : 8}">Not Listed Yet</span></label>
+            <label class="fs-3" [ngStyle]="{'height.px' : 60, 'font-family': 'app_font'}">List Rewards <span
+                    class="text-muted d-block" [ngStyle]="{'font-size.px' : 8}">Not Listed Yet</span></label>
             <div class="card top-card border-0 rounded-4">
                 <div class="card-body d-flex flex-column justify-content-center ">
                     <div
