add table responsive

--- a/src/app/pages/dashboard/manage-merchant/merchant-approve/merchant-approve.component.html
+++ b/src/app/pages/dashboard/manage-merchant/merchant-approve/merchant-approve.component.html
@@ -1,7 +1,7 @@
 <div class="merchant-wrapper d-flex flex-column">
     <div class="row p-0 m-0 px-5 mb-auto">
         <label class="fs-3 me-auto ps-0 mb-3 my-auto cursor-pointer" (click)="onClickBack()"><span class="me-2"><img src="assets/img/project/dashboard/arrow_back.png" width="14" height="14" /></span>Manage Merchant</label>
-        <div class="merchant-table-wrapper p-0">
+        <div class="merchant-table-wrapper p-0 table-responsive">
             <table class="table merchant-table">
                 <thead>
                     <tr>
