--- a/src/app/pages/dashboard/manage-merchant/manage-merchant.component.scss
+++ b/src/app/pages/dashboard/manage-merchant/manage-merchant.component.scss
@@ -8,9 +8,12 @@
     background-color: white;
     color           : black;
 }
-
+.merchant-table-wrapper {
+    overflow-x: auto;
+}
 .merchant-table {
     font-size: 12px;
+    min-width: 1100px;
     tbody {
         tr {
             background-color: transparent;
