--- a/src/app/pages/dashboard/manage-reward/manage-reward.component.scss
+++ b/src/app/pages/dashboard/manage-reward/manage-reward.component.scss
@@ -13,6 +13,10 @@
 }
 
 .table-wrapper {
+    overflow-x: auto;
+    .table {
+        min-width: 1100px;
+    }
     th:not(:last-child) {
         background-image   : url('/assets/img/project/dashboard/th_border.png');
         background-repeat  : no-repeat;
