--- a/src/app/pages/auth/auth/user-signup/third-step/third-step.component.html
+++ b/src/app/pages/auth/auth/user-signup/third-step/third-step.component.html
@@ -1,32 +1,42 @@
-<div class="mx-auto mb-3 input-group position-relative" [ngStyle]="{'width.rem' : 25, 'height.rem' : 3}">
-    <select class="form-control rounded-pill">
-        <option>Country</option>
-        <option>Country</option>
-        <option>Country</option>
-        <option>Country</option>
-        <option>Country</option>
-        <option>Country</option>
-    </select>
-</div>
-<div class="mx-auto text-start mb-1" [ngStyle]="{'width.rem' : 25}">
-    <label>Select Payment</label>
-</div>
+<form [formGroup]="formGroup">
+    <div class="mx-auto mb-3 input-group position-relative" [ngStyle]="{'width.rem' : 25, 'height.rem' : 3}">
+        <select formControlName="currency" class="form-control rounded-pill"
+            [ngClass]="{ 'is-invalid' : formGroup.controls.currency.errors && formGroup.controls.currency.touched }">
+            <option>Currency</option>
+            <option value="USD">USD</option>
+            <option value="EURO">EURO</option>
+        </select>
+    </div>
+    <div class="mx-auto text-start mb-1" [ngStyle]="{'width.rem' : 25}">
+        <label>Select Payment</label>
+    </div>
 
-<div [ngStyle]="{'width.rem' : 25}" class="d-flex mx-auto">
-    <div class="me-auto mb-3 input-group position-relative" [ngStyle]="{'width.rem' : 10, 'height.rem' : 3}">
-        <app-custom-button [text]="'Stripe'" class="w-100" [isTextStroke]="false"></app-custom-button>
+    <div [ngStyle]="{'width.rem' : 25}" class="d-flex mx-auto">
+        <div class="me-auto mb-3 input-group position-relative" [ngStyle]="{'width.rem' : 10, 'height.rem' : 3}">
+            <app-custom-button [text]="'Stripe'" class="w-100" [isTextStroke]="false"></app-custom-button>
+        </div>
+        <div class="mb-3 input-group position-relative" [ngStyle]="{'width.rem' : 14, 'height.rem' : 3}">
+            <app-custom-button [text]="'Credit Card'" class="w-100" [isBackgroundTransparent]="true" [isTextDark]="true"
+                [isTextStroke]="false"></app-custom-button>
+        </div>
     </div>
-    <div class="mb-3 input-group position-relative" [ngStyle]="{'width.rem' : 14, 'height.rem' : 3}">
-        <app-custom-button [text]="'Credit Card'" class="w-100" [isBackgroundTransparent]="true" [isTextDark]="true" [isTextStroke]="false"></app-custom-button>
+    <div class="form-check mx-auto d-flex" [ngStyle]="{'width.rem' : 25}">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <label class="form-check-label ms-2" for="flexCheckDefault">
+            <a class="" [ngStyle]="{'text-decoration' : 'underline'}">Accept Terms and Conditions</a>
+        </label>
     </div>
-</div>
-<div class="form-check mx-auto d-flex" [ngStyle]="{'width.rem' : 25}">
-    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-    <label class="form-check-label ms-2" for="flexCheckDefault">
-      <a class="" [ngStyle]="{'text-decoration' : 'underline'}">Accept Terms and Conditions</a>
-    </label>
-  </div>
-<div class="mx-auto mb-4" [ngStyle]="{'width.rem' : 10, 'margin-top.rem': 3}">
-    <app-custom-button [text]="'Next'" (onClickEvent)="onClickNext($event)">
-    </app-custom-button>
-</div>
+    <div class=" d-flex flex-row justify-content-center align-items-center">
+        <div *ngIf="selectedStepIndex != 0" class="ms-auto mb-4 mx-1"
+            [ngStyle]="{'width.rem' : 10, 'margin-top.rem': 3}">
+            <app-custom-button [text]="'Previous'" [isBackgroundTransparent]="true"
+                (onClickEvent)="onClickPrev($event)">
+            </app-custom-button>
+        </div>
+        <div class="mb-4" [ngClass]="{ 'me-auto mx-1': selectedStepIndex != 0, 'mx-auto': selectedStepIndex == 0}"
+            [ngStyle]="{'width.rem' : 10, 'margin-top.rem': 3}">
+            <app-custom-button [text]="'Next'" (onClickEvent)="onClickNext($event)">
+            </app-custom-button>
+        </div>
+    </div>
+</form>
