--- a/src/app/pages/dashboard/user-portal/user-portal.component.html
+++ b/src/app/pages/dashboard/user-portal/user-portal.component.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="col-md-4 col-sm-12 mb-3">
-            <label class="fs-3" [ngStyle]="{'height.px' : 60, 'font-family': 'app_font'}">Redeemed Rewards</label>
+            <label class="fs-4 d-flex flex-column justify-content-center" [ngStyle]="{'height.px' : 60, 'font-family': 'app_font', 'vertical-align': 'middle'}">Redeemed Rewards</label>
             <div class="card top-reward-card border-0 rounded-4" [ngStyle]="{'height.px': 317}">
                 <div class="card-body d-flex flex-column justify-content-center ">
                     <div
@@ -60,7 +60,7 @@
                         <div class="item-image">
                             <img src="assets/img/project/dashboard/image_1.png" class="img-fluid" />
                         </div>
-                        <div class="fw-bold fs-5">
+                        <div class="fw-bold" [ngStyle]="{'font-size': '16px'}">
                             Reward Name
                         </div>
                         <div class="item-title rounded-pill px-3 btn-main-bg text-white py-2"
@@ -73,7 +73,7 @@
                         <div class="item-image">
                             <img src="assets/img/project/dashboard/image_2.png" class="img-fluid" />
                         </div>
-                        <div class="fw-bold fs-5">
+                        <div class="fw-bold " [ngStyle]="{'font-size': '16px'}">
                             Reward Name
                         </div>
                         <div class="rounded-pill px-3 btn-main-bg text-white py-2" [ngStyle]="{'font-size.px': 8}">
@@ -88,8 +88,8 @@
     <div class="row p-0 m-0 pe-5">
         <div class="col-md-8 col-sm-12 mb-3">
             <label class="fs-3 mb-3" [ngStyle]="{'font-family': 'app_font'}">Money Spent</label>
-            <div class="row row-cols-2 row-cols-md-1 row-cols-lg-2">
-                <div class="col mb-3">
+            <div class="row">
+                <div class="col-12 col-md-6 mb-3">
                     <div
                         class="card money-spent-card border-0 rounded-5 d-flex flex-column justify-content-center h-100">
                         <div class="collection-title d-flex flex-column justify-content-center align-items-center">
@@ -97,12 +97,14 @@
                                 [ngStyle]="{'font-family': 'app_font', 'font-size': '14px'}">Most Valuable
                                 Reward</label>
                         </div>
-                        <div class="p-3 pt-0 collection-image-wrapper mx-auto">
-                            <img src="assets/img/project/dashboard/money_spent.png" class="collection-img" />
+                        <div class="p-3 pt-0 collection-image-wrapper mx-auto flex-fill w-100 h-100">
+                            <div class="h-100 w-100 position-relative">
+                                <img src="assets/img/project/dashboard/money_spent.png" class="collection-img" />
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col mb-3">
+                <div class="col-12 col-md-6 mb-3">
                     <div class="card top-card border-0 rounded-4 h-100">
                         <div class="card-body">
                             <label>Financial transaction/month</label>
