--- a/src/app/pages/dashboard/user-portal/user-portal.component.scss
+++ b/src/app/pages/dashboard/user-portal/user-portal.component.scss
@@ -59,19 +59,26 @@
         border-radius: 20px;
     } 
 }
-.collection-image-wrapper {
-    height: 100%;
-    width: 100%;
-    .collection-img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-        border-radius: 20px;
-    }
-}
+
 
 
 .money-spent-card {
     height: 400px!important;
     background-color: #000000;
+    .collection-img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: fill;
+    }
+    // .collection-image-wrapper {
+    //     // height: 100%;
+    //     width: 100%;
+    //     .collection-img {
+    //         // height: 100%;
+    //         width: 100%;
+    //         object-fit: cover;
+    //         border-radius: 20px;
+    //     }
+    // }
 }
