--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -218,7 +218,7 @@
 
         <div class="three-ways-wrapper px-0 mx-0 mt-0 py-4 text-center">
           <h1 class=" text-dark fw-800 py-4 ">
-            Three Ways To Win
+            Three Ways To Win {{userBalance}}
           </h1>
           <div class="scroll-wrapper mx-3">
             <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="threeWaySlideConfig"
